--- a/src/app/protected/edu/lessons/lessons.page.html
+++ b/src/app/protected/edu/lessons/lessons.page.html
@@ -4,6 +4,10 @@
       <ion-icon name="list"></ion-icon>
       <ion-label>{{ 'Challenges' | translate }}</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="tests">
+      <ion-icon name="list"></ion-icon>
+      <ion-label>{{ 'Tests' | translate }}</ion-label>
+    </ion-tab-button>
     <ion-tab-button tab="roomcontrol">
       <ion-icon name="room"></ion-icon>
       <ion-label>{{ 'Room' | translate }}</ion-label>
