--- a/src/app/shared/cranix-md-list/cranix-md-list.component.scss
+++ b/src/app/shared/cranix-md-list/cranix-md-list.component.scss
@@ -16,3 +16,10 @@ ion-item{
     margin-left: 2px;
     margin-right: 2px;
 }
+
+.odd {
+    background-color: lightgray;
+}
+.pair {
+    background-color: darkgray;
+}
