Simplify API pathes for challenges

--- a/src/app/protected/edu/lessons/challenges/challenges.component.html
+++ b/src/app/protected/edu/lessons/challenges/challenges.component.html
@@ -148,5 +148,5 @@
   </ion-item>
 </ion-content>
 <ion-content *ngIf="!selectedChallenge">
-  <cranix-md-list objectType="challenges/challenge" [context]="context"></cranix-md-list>
+  <cranix-md-list objectType="challenge" [context]="context"></cranix-md-list>
 </ion-content>
