--- a/src/app/shared/cranix-md-list/cranix-md-list.component.html
+++ b/src/app/shared/cranix-md-list/cranix-md-list.component.html
@@ -92,6 +92,10 @@
           <h5>{{ object.role | translate }}</h5>
           <h5>{{ object.classes }}</h5>
         </ion-label>
+        <ion-label  *ngIf="objectType == 'challenge'">
+          <h5>{{'available' | translate}} {{'from' | translate }}: {{ object.validFrom |  date:'yyyy-MM-dd HH:mm' }}</h5>
+          <h5>{{'until' | translate }}: {{ object.validUntil |  date:'yyyy-MM-dd HH:mm' }}</h5>
+        </ion-label>
       </ion-item>
       <ion-item-options side="end">
         <ion-item-option *ngIf="objectType == 'institute' && object.ipVPN && object.ipVPN != ''" color="secondary"
