--- a/src/app/protected/edu/lessons/challenges/challenges.component.scss
+++ b/src/app/protected/edu/lessons/challenges/challenges.component.scss
@@ -9,3 +9,15 @@
 .counter {
   margin-right: 14px;
 }
+
+.verticalHd {
+  text-align:center;
+  white-space:nowrap;
+  transform: rotate(90deg);
+}
+
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
