--- a/src/app/protected/edu/lessons/lessons.page.html
+++ b/src/app/protected/edu/lessons/lessons.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="challenges">
+    <ion-tab-button *ngIf="authS.isAllowed('challenge.manage')" tab="challenges">
       <ion-icon name="list"></ion-icon>
       <ion-label>{{ 'Challenges' | translate }}</ion-label>
     </ion-tab-button>
@@ -8,7 +8,7 @@
       <ion-icon name="list"></ion-icon>
       <ion-label>{{ 'Tests' | translate }}</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="roomcontrol">
+    <ion-tab-button *ngIf="authS.isAllowed('education.rooms')" tab="roomcontrol">
       <ion-icon name="room"></ion-icon>
       <ion-label>{{ 'Room' | translate }}</ion-label>
     </ion-tab-button>
