Implementing download of the results.

--- a/src/app/protected/edu/lessons/challenges/challenges.component.html
+++ b/src/app/protected/edu/lessons/challenges/challenges.component.html
@@ -4,6 +4,10 @@
     {{selectedChallenge.description}}
   </ion-title>
   <ion-buttons slot="end">
+
+    <ion-button size="small" fill="solid" (click)="downloadEval()">
+      <ion-icon slot="icon-only" name="download" color="success"></ion-icon>
+    </ion-button>
     <ion-button size="small" fill="solid" (click)="htmlResult=null">
       <ion-icon slot="icon-only" name="close" color="danger"></ion-icon>
     </ion-button>
