Now we can download the result.

--- a/src/app/protected/edu/lessons/challenges/challenges.component.html
+++ b/src/app/protected/edu/lessons/challenges/challenges.component.html
@@ -4,8 +4,7 @@
     {{selectedChallenge.description}}
   </ion-title>
   <ion-buttons slot="end">
-
-    <ion-button size="small" fill="solid" (click)="downloadEval()">
+    <ion-button size="small" fill="solid" (click)="downloadResults()">
       <ion-icon slot="icon-only" name="download" color="success"></ion-icon>
     </ion-button>
     <ion-button size="small" fill="solid" (click)="htmlResult=null">
