--- a/src/app/protected/edu/lessons/tests/tests.component.html
+++ b/src/app/protected/edu/lessons/tests/tests.component.html
@@ -28,7 +28,7 @@
         </ion-content>
       </ng-template>
     </ion-popover>
-    <ion-button size="small" fill="solid" (click)="save()">
+    <ion-button size="small" fill="solid" (click)="save()" matTooltip="{{'Save challenge' | translate }}">
       <ion-icon slot="icon-only" name="checkmark" color="success"></ion-icon>
     </ion-button>
   </ion-buttons>
