--- a/src/app/protected/edu/lessons/lessons.page.html
+++ b/src/app/protected/edu/lessons/lessons.page.html
@@ -1,8 +1,8 @@
-<ion-tabs>
+<ion-tabs (ionTabsDidChange)="cleanUp()">
   <ion-tab-bar slot="bottom">
     <ion-tab-button *ngIf="authS.isAllowed('challenge.manage')" tab="challenges">
       <ion-icon name="list"></ion-icon>
-      <ion-label>{{ 'Challenges' | translate }}</ion-label>
+      <ion-label>{{ 'Create Tests' | translate }}</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="tests">
       <ion-icon name="list"></ion-icon>
